<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="it.unibo.pse.smartcar.activities.MainActivity"
    android:layout_margin="10dp">

    <Button
        android:text="@string/button_start_mode_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/start_button" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/settings_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="true" />

        <Switch
            android:text="@string/notifications_email_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_email_switch"
            android:padding="10dp" />

    </LinearLayout>
</LinearLayout>
