<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_active_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="it.unibo.pse.smartcar.activities.ActiveModeActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp">

        <Button
            android:text="@string/button_driving_mode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/driving_mode_btn"
            android:layout_weight="1" />

        <Button
            android:text="@string/button_parking_mode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parking_mode_btn"
            android:layout_weight="1" />

        <Button
            android:text="@string/button_stop_mode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stop_btn"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/driving_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:text="@string/distance_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="24sp" />

                <TextView
                    android:text="@string/null_distance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/distance_label"
                    android:gravity="center_vertical|center"
                    android:textSize="36sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:background="@android:color/darker_gray">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/distance_level_5"
                    android:layout_marginBottom="2dp"
                    android:background="#FFF" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/distance_level_4"
                    android:background="#FFF"
                    android:layout_marginBottom="2dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/distance_level_3"
                    android:background="#FFF"
                    android:layout_marginBottom="2dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/distance_level_2"
                    android:background="#FFF"
                    android:layout_marginBottom="2dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/distance_level_1"
                    android:background="#FFF"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/contact_layout">

            <TextView
                android:text="@string/contact_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:gravity="center"
                android:background="@android:color/holo_red_light"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/null_degrees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/serv_mot_val_label"
                    android:textSize="24sp" />

                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:max="10"
                    android:progress="3"
                    android:id="@+id/serv_mot_seekbar"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:text="@string/defenseButtonTerminateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/defenseOffBtn" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parking_layout"
        android:layout_margin="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:id="@+id/scrollView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/parkingLog"
                />
        </ScrollView>
    </LinearLayout>

</LinearLayout>
